--- a/examples/remote-browser-logger/README
+++ b/examples/remote-browser-logger/README
@@ -6,6 +6,6 @@ or
 
 1. Go to the root dir
 2. Start a web server, eg `httpserver`
-3. Execute `am-server`
+3. Execute `ami-server`
 4. Execute `am-inspector "http://localhost:3797/"`
 5. Go to `http://localhost:8080` (port depends on step 1)
